--- a/whcs.tex
+++ b/whcs.tex
@@ -180,6 +180,7 @@ pdfauthor={Grant Hernandez},
 %\let\clearpage\relax
 \listoffigures% \addcontentsline{toc}{section}{List of Figures}
 \listoftables% \addcontentsline{toc}{section}{List of Tables}
+\listoftodos
 \clearpage
 % \endgroup
 
@@ -197,6 +198,7 @@ pdfauthor={Grant Hernandez},
 \pagestyle{empty}
 
 % Actual References
+\todo[inline]{Must have an ``old style'' reference section}
 \renewcommand{\refname}{\centerline{\Large\bf References Cited}}
 \bibliographystyle{simple}
 \bibliography{./ref}
