Base station flowchart

--- a/hwsw.tex
+++ b/hwsw.tex
@@ -1304,6 +1304,8 @@ ultimate goal of this project.
 % Section 5.7.1
 \subsubsection{Software Flowchart}
 
+\ucfgfx[width=0.8\textwidth]{fig:base-station-flow}{base-station-flow}{the high level software flow for the base station}
+
 % Section 5.7.2
 \subsubsection{Control Module Data Structures}
 
