--- a/pcb.tex
+++ b/pcb.tex
@@ -33,9 +33,7 @@ the primary features of EAGLE and yet, is completely free and open source. The b
 
 One issue with KiCad is the lack of a built in Autorouter. KiCad provides an external router, FreeRouting\footnote{\url{http://www.freerouting.net/}}, but it has experienced recent legal trouble due to one of the developers previous employers.
 
-Another nifty feature that KiCad has is its 3D board view. \autoref{fig:kicad-3D} shows the 3D view of an example board by Orlando Arias\footnote{A 3$^{rd}$ year Computer Engineering student at UCF}. This feature is great for getting a sense of your board layout in relation to the selected footprints.
-
-\ucfgfx[scale=0.32]{fig:kicad-3D}{kicad-3D}{An ATtiny development board displayed in KiCad's 3D board view}
+Another nifty feature that KiCad has is its 3D board view. This feature is great for getting a sense of your board layout in relation to the selected footprints.
 
 % Section 6.2
 \subsection{Layout}
