Remove all exclamation points

--- a/desc.tex
+++ b/desc.tex
@@ -183,7 +183,8 @@ costs can be reduced.
 
 In terms of administration, Nest has a online web interface and a mobile app
 that will display all of the networked devices, allowing for a highly connected
-experience. Change your temperature from your warm bed or before you even get home!
+experience. This would allow you to change your temperature from your warm bed
+or before you even get home.
 
 Nest Labs was recently
 \href{http://www.forbes.com/sites/greatspeculations/2014/01/17/googles-strategy-behind-the-3-2-billion-acquisition-of-nest-labs/}{purchased by Google for \$3.2 billion dollars},
